<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentCalculadora"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculadora">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="244dp"
            android:layout_height="24dp"
            android:text="@string/dev_sign"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.95" />

        <EditText
            android:id="@+id/inputCalculadora"
            android:layout_width="359dp"
            android:layout_height="52dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.054"
            tools:text="@string/blank" />

        <TextView
            android:id="@+id/outputCalculadora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_title"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.087"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:background="@color/purple"
            android:text="@string/btn_calc_1"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.077"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.378" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:background="@color/purple"
            android:text="@string/btn_calc_5"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.077"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.532" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:background="@color/purple"
            android:text="@string/btn_calc_9"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.077"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.687" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:background="@color/purple"
            android:text="@string/btn_calc_0"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.357"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.687" />

        <Button
            android:id="@+id/btnmais"
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:background="@color/purple"
            android:text="@string/btn_calc_soma"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.651"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.687" />

        <Button
            android:id="@+id/btnmenos"
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:background="@color/purple"
            android:text="@string/btn_calc_sub"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.922"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.687" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:background="@color/purple"
            android:text="@string/btn_calc_8"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.922"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.532" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:background="@color/purple"
            android:text="@string/btn_calc_6"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.357"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.532" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:background="@color/purple"
            android:text="@string/btn_calc_7"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.651"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.532" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:background="@color/purple"
            android:text="@string/btn_calc_2"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.357"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.378" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:background="@color/purple"
            android:text="@string/btn_calc_3"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.651"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.378" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:background="@color/purple"
            android:text="@string/btn_calc_4"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.922"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.378" />

        <Button
            android:id="@+id/btnmulti"
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:background="@color/purple"
            android:text="@string/btn_calc_mult"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.077"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.835" />

        <Button
            android:id="@+id/btndiv"
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:background="@color/purple"
            android:text="@string/btn_calc_div"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.357"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.835" />

        <Button
            android:id="@+id/btndel"
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:background="@color/purple"
            android:text="@string/btn_calc_del"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.651"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.835" />

        <Button
            android:id="@+id/btnigual"
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:background="@color/purple"
            android:text="@string/btn_calc_igual"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.922"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.835" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>